		when free-floating.
	Cleared Vector3d out of Agent.java in crowd3d; using Mutable3D instead
	Major modifications to Shape3D/Sphere/Cone/CylinderPortrayal3D.  We've moved them
		all under a new superclass called PrimitivePortrayal3D and have completely
		cleaned them out and made them consistent.  A new facility has been created
		with a lot of helpful methods to make it easy to transform (rotate, scale)
		them and change their appearance dynamically.  Thanks to Joerg Hoehne
		(hoehne@gmail.com) for the nudging.  Further modification of other classes
		will follow (like CubePortrayal3D and the various edge classes).
	Added a brand new BoxPortrayal3D (based on java3d's Box), extending PrimitivePortrayal3D.
	Balls3D's BallPortrayal class has been radically simplified and can do cool things
		now to show off the modifications in the various shapes above.
	Updated Tutorial5 and balls3d to both force collision checks when the balls are
		being created so the initial screenshot is prettier (has proper colors in it).
	Reindented
	Changed calls to cloneNode() into calls to cloneTree() in certain 3D portrayals;
		cloneNode() is supposedly pseudoprivate.
	Slightly revised setSelected() procedure for 3D objects.  Still suboptimal though.
		See documentation on the method in SimplePortrayal3D.
	Added a HowTo
	Bug fix to ShapePortrayal3D: added an appearance now
	Bug fix to CubePortrayal3D on pickability. 
		(although we might soon replace the class with BoxPortrayal3D).
	GenericEdgePortrayal3D lets you change the appearace and turn picking on/off. 
		-(i.e. some of the functionality of PrimitivePortrayal3D is offered here, too).
		-fixed previous bug in picking edge-portrayals extending GenericEdgePortrayal3D.
		-The classes extended GenericEdgePortrayal3D were refactored.
		-For using non-Primitive edge portrayal constructs, see ArrowEdgePortrayal3D.
	Updated MASON to compile with java 1.4
	Moved ValuePortrayal3D under ShapePortrayal3D