@@ -25,33 +25,30 @@ import sim.portrayal3d.simple.*;
 public class ArrowEdgePortrayal3D extends GenericEdgePortrayal3D
     {
 	
-	
-    static class PickableArrow extends Arrow
-        {
-        public PickableArrow(){this(1f);}
-        public PickableArrow(Appearance appearance){this(1f,appearance);}
-        public PickableArrow(float radius)
-			{ this(radius, appearanceForColors(java.awt.Color.gray, null, java.awt.Color.gray, java.awt.Color.gray, 1.0f, 1.0f)); }
-		
-        public PickableArrow(float arrowTailRadius, Appearance appearance)
-            {
-            super(arrowTailRadius, 
-                new Vector3f(0f,-1f,0f),
-                new Vector3f(0f,1f,0f),
-                null, null, appearance);
-            setAllPickableFlags();
-            }
-
-        private void setAllPickableFlags()
-            {
-            SimplePortrayal3D.setPickableFlags(arrowHead.getShape(Cylinder.BODY));
-            SimplePortrayal3D.setPickableFlags(arrowHead.getShape(Cylinder.TOP));
-            SimplePortrayal3D.setPickableFlags(arrowTail.getShape(Cylinder.TOP));
-            SimplePortrayal3D.setPickableFlags(arrowTail.getShape(Cylinder.BOTTOM));
-            SimplePortrayal3D.setPickableFlags(arrowTail.getShape(Cylinder.BODY));
-            }
-
-        }
+//    static class PickableArrow extends Arrow
+//        {
+//        public PickableArrow(){this(1f);}
+//        public PickableArrow(Appearance ap){this(1f,ap);}
+//        public PickableArrow(float radius){this(radius, null);}
+//        public PickableArrow(float arrowTailRadius, Appearance appearance)
+//            {
+//            super(arrowTailRadius, 
+//                new Vector3f(0f,-1f,0f),
+//                new Vector3f(0f,1f,0f),
+//                null, null, appearance);
+//            setAllPickableFlags();
+//            }
+//
+//        private void setAllPickableFlags()
+//            {
+//            SimplePortrayal3D.setPickableFlags(arrowHead.getShape(Cylinder.BODY));
+//            SimplePortrayal3D.setPickableFlags(arrowHead.getShape(Cylinder.TOP));
+//            SimplePortrayal3D.setPickableFlags(arrowTail.getShape(Cylinder.TOP));
+//            SimplePortrayal3D.setPickableFlags(arrowTail.getShape(Cylinder.BOTTOM));
+//            SimplePortrayal3D.setPickableFlags(arrowTail.getShape(Cylinder.BODY));
+//            }
+//
+//        }
     private static Vector3f dummyFrom = new Vector3f(0f,-1f,0f);
     private static Vector3f dummyTo = new Vector3f(0f,1f,0f);
     
@@ -62,12 +59,12 @@ public class ArrowEdgePortrayal3D extends GenericEdgePortrayal3D
         
     public ArrowEdgePortrayal3D(float radius)
         {
-        super(new Arrow(radius, dummyFrom, dummyTo, null, null, appearanceForColors(java.awt.Color.gray, null, java.awt.Color.gray, java.awt.Color.gray, 1.0f, 1.0f)));
+        this(radius, appearanceForColors(java.awt.Color.gray, null, java.awt.Color.gray, java.awt.Color.gray, 1.0f, 1.0f));
         }
         
     public ArrowEdgePortrayal3D(float radius, Appearance ap)
         {
-        super(new PickableArrow(radius, ap));
+        super(new Arrow(radius, dummyFrom, dummyTo, null, null, ap));
         }       
 
 
